--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,10 @@
-{}
+{
+  "singleQuote": false,
+  "semi": true,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "printWidth": 80,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "arrowParens:": "always",
+}
