--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@popperjs/core": "2.10.2",
+    "axios": "^0.27.2",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
     "jkanban": "^1.3.1",
+    "sweetalert2": "^11.4.24",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
     "vuex": "^4.0.2"
